@@ -11,6 +11,7 @@ details. */
 #ifndef _CYGWIN_STDLIB_H
 #define _CYGWIN_STDLIB_H
 
+#include <sys/cdefs.h>
 #include <cygwin/wait.h>
 
 #ifdef __cplusplus
@@ -31,9 +32,7 @@ void	setprogname (const char *);
 char *canonicalize_file_name (const char *);
 int unsetenv (const char *);
 #endif /*__STRICT_ANSI__*/
-#if !defined(__STRICT_ANSI__) \
-    || (defined(_XOPEN_SOURCE) \
-	&& ((_XOPEN_SOURCE - 0 >= 500) || defined(_XOPEN_SOURCE_EXTENDED)))
+#if !defined(__STRICT_ANSI__) || (__XSI_VISIBLE >= 500)
 char *initstate (unsigned seed, char *state, size_t size);
 long random (void);
 char *setstate (const char *state);
